# NativeLib_Android

./: Readme.md  build.gradle.kts  proguard-rules.pro
src/androidTest/java/com/corexero/nativelib/: ExampleInstrumentedTest.kt
src/main/cpp/: CMakeLists.txt  nativelib.cpp  security_config.h.in
src/main/java/com/corexero/nativelib/: KeystoreChecker.kt  NativeLib.kt
src/test/java/com/corexero/nativelib/: ExampleUnitTest.kt
